--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
+      #POSTGRES_HOST_AUTH_METHOD: scram-sha-256
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./database/postgres/init:/docker-entrypoint-initdb.d  
