Add getProductByName API method in Flask backend

--- a/api_description.yml
+++ b/api_description.yml
@@ -64,7 +64,7 @@ paths:
         - "products"
         summary: "Returns the data of a product in the catalog"
         description: ""
-        operationId: "getProductById"
+        operationId: "getProductByName"
         produces:
         - "application/json"
         parameters:
