--- a/backend/flask/requirements.txt
+++ b/backend/flask/requirements.txt
@@ -1,3 +1,5 @@
 Flask==1.1.2
 pytest==6.1.1
 flask-sqlalchemy==2.4.4
+psycopg2==2.8.6  #sudo apt-get install libpq-dev (required in ubuntu)
+environs==9.2.0
