--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       #POSTGRES_HOST_AUTH_METHOD: scram-sha-256
       POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - 5432:5432  
     volumes:
       - ./database/postgres/init:/docker-entrypoint-initdb.d  
