--- a/api_description.yml
+++ b/api_description.yml
@@ -29,11 +29,13 @@ paths:
           default: false
         responses:
           200:
-            description: "successful operation"
+            description: "Successful operation"
             schema:
               type: "array"
               items:
                 $ref: "#/definitions/Product"
+          500:
+            description: "Cannot complete the operation"
     post:
       tags:
       - "products"
@@ -58,13 +60,15 @@ paths:
               $ref: "#/definitions/Product"
         400:
           description: "Invalid product fields"
+        500:
+          description: "Cannot complete the operation"  
   /products/{productName}:  
     get:
         tags:
         - "products"
         summary: "Returns the data of a product in the catalog"
         description: ""
-        operationId: "getProductByName"
+        operationId: "getProductById"
         produces:
         - "application/json"
         parameters:
@@ -75,11 +79,13 @@ paths:
           required: true
         responses:
           200:
-            description: "successful operation"
+            description: "Successful operation"
             schema:
               $ref: "#/definitions/Product"
           404:
-            description: "Product not found"      
+            description: "Product not found"
+          500:
+            description: "Cannot complete the operation"  
     put:
       tags:
       - "products"
@@ -104,7 +110,9 @@ paths:
           $ref: "#/definitions/Product"  
       responses:
         200:
-          description: "Product was updated successfully"
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Product"
         400:
           description: "Invalid product fields"
         404:
@@ -122,10 +130,12 @@ paths:
         required: true
         type: "string"
       responses:
-        200:
+        204:
           description: "Product was deleted successfully"
         404:
           description: "Product not found"
+        500:
+          description: "Cannot complete the operation"  
  
 
 definitions:
