--- a/backend/flask/requirements.txt
+++ b/backend/flask/requirements.txt
@@ -4,3 +4,4 @@ flask-sqlalchemy==2.4.4
 psycopg2==2.8.6  #sudo apt-get install libpq-dev (required in ubuntu)
 environs==9.2.0
 Flask-Migrate==2.5.3
+Flask-RESTful==0.3.8
