--- a/backend/flask/requirements.txt
+++ b/backend/flask/requirements.txt
@@ -5,3 +5,4 @@ psycopg2==2.8.6  #sudo apt-get install libpq-dev (required in ubuntu)
 environs==9.2.0
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
+flask-wtf
